...
        .tag(item)
        .accessibilityIdentifier(item.accessibilityIdentifier)
    }
}

private struct Strings {
    static let reader = NSLocalizedString("readerSidebar.navigationTitle", value: "Reader", comment: "Reader sidebar title on iPad")
    static let lists = ReaderNavigationButton.Strings.lists
}

