...
            .then(navigateToPrivacySettings())
            .start(on: rootViewController, animated: true)
    }

    // MARK: - Navigators

    /// Creates a navigation action to navigate to the "Me" scene.
    ///
    /// The "Me" scene's navigation controller is popped to the root in case the "Me" scene was already presented.
    private func navigateToMeScene() -> ViewControllerNavigationAction {
        return .init { [weak self] _, completion in
            self?.showMeScreen(completion: completion)
        }
...
